[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spelling-bee"
version = "0.0.1"
authors = [
    {name = "James Hoctor", email = "jehoctor@protonmail.com"}
]
description = "Cheat at the NYT Spelling Bee."
homepage = "https://github.com/JEHoctor/spelling-bee-cheat"
readme = "README.md"
license = "MIT"
packages=["spelling_bee"]
dependencies = [
    "beautifulsoup4",
    "click",
    "more-itertools",
    "nltk",
    "numpy",
    "pandas",
    "scikit-learn",
    "spacy",
    "transformers",
]
scripts=[
    "scripts/markov.py",
    "scripts/scrape.py",
]

[project.optional-dependencies]
dev = ["black", "isort", "jupyter", "pip-tools", "pytest", "ruff", "seaborn"]